# awwasm-parser

./: Cargo.toml  README.md
src/: components.rs  consts.rs  lib.rs  limits.rs
src/components/: instructions.rs  module.rs  section.rs  types.rs
